# sparta-tauri

./: .gitattributes  .gitignore  Dockerfile.build  build-rpi.sh  build.sh  check_deps.ps1  data member uhamka.xlsx  init_alpr.cmd  init_fastalpr_model.sh  install_dependencies.cmd  install_dependencies.ps1  install_dependencies.sh  master parkir.xlsx  master tipe member.xlsx  panduan_install.txt  pnpm-lock.yaml  ~$data member uhamka.xlsx
exit-gate/: AUTOSTART_SETUP.md  BARCODE_INTEGRATION_FIX.md  CCTV_IMPLEMENTATION.md  DATABASE_ALIGNMENT.md  DEPLOYMENT_SUCCESS_SUMMARY.md  GPIO_IMPLEMENTATION.md  GPIO_SUMMARY.md  HIKVISION_ISAPI_SUPPORT.md  README-RPI.md  README_NEW.md  README_OLD.md  build-rpi-direct.sh  build-rpi.cmd  build-rpi.ps1  build-rpi.sh  copy-to-rpi-optimized.sh  copy-to-rpi.sh  copytorpi.ps1  deploy-barcode-integration.sh  deploy-to-pi-auto.cmd  deploy-to-pi-auto.ps1  deploy-to-pi-auto.sh  deploy-to-pi.sh  make-executable.sh  package.json  pnpm-lock.yaml  quasar.config.ts  setup-autostart-rpi.ps1  setup-gpio.sh  test-gpio.sh  test-rpi.sh  troubleshoot-ssh.ps1
exit-gate-nodejs/: .env  .env.example  .gitignore  COMPATIBILITY-TROUBLESHOOTING.md  CREATE-BUNDLE.cmd  EXIT_GATE_GPIO_SETUP_GUIDE.md  GPIO-TROUBLESHOOTING.md  IMPLEMENTATION.md  OFFLINE-INSTALLATION-GUIDE.md  OFFLINE-SYSTEM-GUIDE.md  README.md  SETUP.md  create-offline-bundle.bat  create-offline-bundle.ps1  create-offline-bundle.sh  deploy-to-rpi.sh  download-dependencies.ps1  download-system-packages.ps1  exit-gate.service  fix-compatibility.sh  fix-line-endings.sh  gpio-fix.sh  gpio-manual-fix.sh  gpio-permission-fix.sh  gpio-setup-exit-gate.sh  gpio-simple-test.sh  gpio-test-exit-gate.sh  gpio-test.js  gpio-troubleshoot.sh  install-gpio-packages.sh  install-offline.sh  install-quick-fix.sh  install-rpi.sh  package-lock.json  package.json  quick-bundle.ps1  server.js  simple-bundle-creator.ps1  test-bundle.cmd  test-bundle.ps1  (+3 more)
exit-gate/src-tauri/: Cargo.toml  tauri.conf.json
exit-gate/src-tauri/src/: gpio_handler.rs  lib.rs
exit-gate/src-tauri/src/command/: camera_handler.rs  mod.rs
python/: .gitignore  ASYNCIO_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TRANSACTION_STRUCTURE_UPDATE.md  config.ini  create_audio.bat  quick_test.py  quick_test_admin.bat  requirements.txt  requirements_raspberry_pi.txt  run_entry_gate.bat  setup_raspberry_pi.sh  setup_windows.bat  start_dev.bat  start_dev.sh  test_printer.bat  test_system.py  test_transaction.bat  test_transaction_structure.py
python-parking-system/: README.md  requirements.txt
tauri/: .gitignore  .tauriignore  PRINTER_FIX_DOCUMENTATION.md  README.md  REFRESH_STRATEGY.md  SYNC_IMPROVEMENT_DOCUMENTATION.md  SYNC_TROUBLESHOOTING.md  TIMEOUT_SYNC_FIX_DOCUMENTATION.md  package.json  pnpm-lock.yaml  (+3 more)
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/src-tauri/resources/: cctv_config.json  gate.json
tauri/src-tauri/scripts/: install_ffmpeg.bat  install_ffmpeg.sh  install_vcpkg.bat
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src-tauri/src/command/: alpr_handler.rs  camera_handler.rs  mod.rs  printer_handler.rs  serial_handler.rs
(+344 files in other folders)
