[package]
name = "tauri-quasar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_quasar_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.2.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
base64 = "0.21"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# Optional: Uncomment if you want to use rppal for GPIO instead of sysfs
# rppal = { version = "0.14", optional = true }

[features]
default = []
# gpio-rppal = ["rppal"]

