[package]
name = "sparta"
version = "1.0.0"
description = "Manless ALPR System"
authors = ["tabarokta"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sparta_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tauri = { version = "2.4.0", features = [] }
tauri-plugin-shell = "2.2.0"
winapi = { version = "0.3", features = ["libloaderapi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
pyo3 = { version = "0.19", features = ["auto-initialize"], default-features = false }
chrono = "0.4"
regex = "1.7"
log = "0.4"
uuid = { version = "1.4", features = ["v4"] }
serialport = "4.3"
rodio = "0.17"
once_cell = "1.19"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
env_logger = "0.11"
